--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Site de Yannis.</title>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css">
 
-    <h1>Heel Turn !</h1>
+<body>
+    <div id="presentation">
+        <h1>Yannis Nouasse Guezo</h1>
+        <p><strong>Bienvenue sur mon portfolio.</strong></p>
+
+        <div class="box">
+            <h3>Excellente communication et bon leadership.</h3>
+            <h3>Bon en autonomie et sérieux en écoute.</h3>
+        </div>
+    </div>
+
+
+    <div id="motivation">
+        <h1>Etudiant en alternance</h1>
+        <p><strong>Motivé et enthousiaste cherchant à intégrer un BTS SIO pour acquérir des connaissances approfondies
+                sur le dév.</strong></p>
+        <div class="box2">
+            <h3>Je connais les bases en CSS, HTML, PHP et JavaScript.</h3>
+        <div>
+        <img height="80px" width="auto" class="fit-picture" src="CSS3_logo_and_wordmark.svg">
+        <img height="80px" width="auto" class="fit-picture" src="CSS3_logo_and_wordmark.svg">
+    </div>
+
+
+    <div id="parcours">
+
+        <h1>En tant que développeur web</h1>
+        <p><strong>Mon ancienne formation a été le lycée Pierre Brossolette, où j'ai eu mon bac en terminale STMG en
+                option RH.</strong></p>
+        <div class="box3">
+            <h3>Mes expériences professionelles ont été le salon de coiffure Dile Création et la Mission Locale de
+                Villeurbanne.</h3>
+            <div>
+                <img height="200px" width="auto" class="fit-picture" src="Coiffure.jpg">
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
+
+
+<img src="" alt="">
