--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         <div class="box">
             <h3>Excellente communication et bon leadership.</h3>
             <h3>Bon en autonomie et sérieux en écoute.</h3>
+            <div>
+                <img height="50px" width="auto" class="fit-picture" src="pngtree-man-communication-icon-free-vector-illustration-material-png-image_7169947.png">
+                <img height="50px" width="auto" class="fit-picture" src="png-transparent-symbols-of-leadership-symbols-of-leadership-symbol-miscellaneous-text-business.png">
+                <img height="50px" width="auto" class="fit-picture" src="4708326.png">
+                <img height="40px" width="auto" class="fit-picture" src="9580447.png">
+            </div>
         </div>
     </div>
 
@@ -25,25 +31,41 @@
                 sur le dév.</strong></p>
         <div class="box2">
             <h3>Je connais les bases en CSS, HTML, PHP et JavaScript.</h3>
-        <div>
-        <img height="80px" width="auto" class="fit-picture" src="CSS3_logo_and_wordmark.svg">
-        <img height="80px" width="auto" class="fit-picture" src="CSS3_logo_and_wordmark.svg">
-    </div>
-
-
-    <div id="parcours">
-
-        <h1>En tant que développeur web</h1>
-        <p><strong>Mon ancienne formation a été le lycée Pierre Brossolette, où j'ai eu mon bac en terminale STMG en
-                option RH.</strong></p>
-        <div class="box3">
-            <h3>Mes expériences professionelles ont été le salon de coiffure Dile Création et la Mission Locale de
-                Villeurbanne.</h3>
             <div>
-                <img height="200px" width="auto" class="fit-picture" src="Coiffure.jpg">
+                <img height="80px" width="auto" class="fit-picture" src="CSS3_logo_and_wordmark.svg.png">
+                <img height="80px" width="auto" class="fit-picture" src="HTML5_logo_and_wordmark.svg.png">
+                <img height="80px" width="auto" class="fit-picture" src="PHP-logo.svg.png">
+                <img height="80px" width="auto" class="fit-picture" src="JavaScript-logo.png">
             </div>
-        </div>
-    </div>
+
+
+            <div id="parcours">
+
+                <h1>En tant que développeur web</h1>
+                <p><strong>Mon ancienne formation a été le lycée Pierre Brossolette, où j'ai eu mon bac en terminale
+                        STMG en
+                        option RH.</strong></p>
+                <div class="box3">
+                    <h3>Mes expériences professionelles ont été le salon de coiffure Dile Création et la Mission Locale
+                        de
+                        Villeurbanne.</h3>
+                    <div>
+                        <img height="200px" width="auto" class="fit-picture" src="Coiffure.jpg">
+                    </div>
+                </div>
+            </div>
+
+            <div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+                <iframe loading="lazy"
+                    style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+                    src="https://www.canva.com/design/DAFnCLv-Rc8/ITfB9acbOrhGyJP6ujxwhw/view?embed"
+                    allowfullscreen="allowfullscreen" allow="fullscreen">
+                </iframe>
+            </div>
+            <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFnCLv-Rc8&#x2F;ITfB9acbOrhGyJP6ujxwhw&#x2F;view?utm_content=DAFnCLv-Rc8&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
+                target="_blank" rel="noopener">CV moderne blanc épuré</a> par Yannis Nouasse
 
 </body>
 
