--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 
 <body>
+    <div class="container">
+
+
     <div id="presentation">
         <h1>Yannis Nouasse Guezo</h1>
         <p><strong>Bienvenue sur mon portfolio.</strong></p>
@@ -66,10 +69,11 @@
             </div>
             <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFnCLv-Rc8&#x2F;ITfB9acbOrhGyJP6ujxwhw&#x2F;view?utm_content=DAFnCLv-Rc8&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
                 target="_blank" rel="noopener">CV moderne blanc épuré</a> par Yannis Nouasse
-
+</div>
 </body>
 
 </html>
 
 
-<img src="" alt="">
+
+
