--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             </div>
         </div>
     </div>
-
+    
+    <div class="container">
 
     <div id="motivation">
         <h1>Etudiant en alternance</h1>
@@ -41,7 +42,7 @@
                 <img height="80px" width="auto" class="fit-picture" src="JavaScript-logo.png">
             </div>
 
-
+           <div class="container"
             <div id="parcours">
 
                 <h1>En tant que développeur web</h1>
