--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div id="parcours">
 
                 <h1>En tant que développeur web</h1>
-                <p><strong>Mon ancienne formation a été le lycée Pierre Brossolette, où j'ai eu mon bac en terminale
+                <p><strong>Mon ancienne formation a été le lycée Pierre Brossolette à Villeurbanne, où j'ai eu mon bac en terminale
                         STMG en
                         option RH.</strong></p>
                 <div class="box3">
@@ -75,6 +75,11 @@
 
 </html>
 
+<style>
+    body {
+      background-image: url('thumb-1920-83970.jpg');
+    }
+    </style>
 
 
 
