--- a/index.html
+++ b/index.html
@@ -6,33 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Site de Yannis.</title>
     <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
     <div class="container">
 
-
-    <div id="presentation">
-        <h1>Yannis Nouasse Guezo</h1>
-        <p><strong>Bienvenue sur mon portfolio.</strong></p>
-
-        <div class="box">
-            <h3>Excellente communication et bon leadership.</h3>
-            <h3>Bon en autonomie et sérieux en écoute.</h3>
-            <div>
-                <img height="50px" width="auto" class="fit-picture" src="pngtree-man-communication-icon-free-vector-illustration-material-png-image_7169947.png">
-                <img height="50px" width="auto" class="fit-picture" src="png-transparent-symbols-of-leadership-symbols-of-leadership-symbol-miscellaneous-text-business.png">
-                <img height="50px" width="auto" class="fit-picture" src="4708326.png">
-                <img height="40px" width="auto" class="fit-picture" src="9580447.png">
+        <div id="presentation">
+            <div class="travail">
+                <h1>Yannis Nouasse Guezo</h1>
+                <p class="slogan">
+                    <strong>Bienvenue sur mon portfolio.</strong>
+                </p>
+            </div>
+            <div class="box">
+                <h3>Excellente communication et bon leadership.</h3>
+                <h3>Bon en autonomie et sérieux en écoute.</h3>
+                <div>
+                    <img height="50px" width="auto" class="fit-picture" src="pngtree-man-communication-icon-free-vector-illustration-material-png-image_7169947.png">
+                    <img height="50px" width="auto" class="fit-picture" src="png-transparent-symbols-of-leadership-symbols-of-leadership-symbol-miscellaneous-text-business.png">
+                    <img height="50px" width="auto" class="fit-picture" src="4708326.png">
+                    <img height="40px" width="auto" class="fit-picture" src="9580447.png">
+                </div>
             </div>
         </div>
     </div>
-    
-    <div class="container">
 
-    <div id="motivation">
-        <h1>Etudiant en alternance</h1>
-        <p><strong>Motivé et enthousiaste cherchant à intégrer un BTS SIO pour acquérir des connaissances approfondies
-                sur le dév.</strong></p>
+        <div id="motivation">
+           <div class="boulot">
+            <h1>Etudiant en alternance</h1>
+            <p class = "métier">
+                <strong>Motivé et enthousiaste cherchant à intégrer un BTS SIO pour acquérir des connaissances approfondies sur le dév.
+            </strong>
+        </p>
+        </div>
         <div class="box2">
             <h3>Je connais les bases en CSS, HTML, PHP et JavaScript.</h3>
             <div>
@@ -41,45 +47,51 @@
                 <img height="80px" width="auto" class="fit-picture" src="PHP-logo.svg.png">
                 <img height="80px" width="auto" class="fit-picture" src="JavaScript-logo.png">
             </div>
+        </div>
+    </div>
 
-           <div class="container"
-            <div id="parcours">
-
-                <h1>En tant que développeur web</h1>
-                <p><strong>Mon ancienne formation a été le lycée Pierre Brossolette à Villeurbanne, où j'ai eu mon bac en terminale
-                        STMG en
-                        option RH.</strong></p>
-                <div class="box3">
-                    <h3>Mes expériences professionelles ont été le salon de coiffure Dile Création et la Mission Locale
-                        de
-                        Villeurbanne.</h3>
-                    <div>
-                        <img height="200px" width="auto" class="fit-picture" src="Coiffure.jpg">
-                    </div>
-                </div>
+       <div id="parcours">
+      <div class="job">
+        <h1>En tant que développeur web</h1>
+        <p class = Formation>
+            <strong>
+                Mon ancienne formation a été le lycée Pierre Brossolette à Villeurbanne, où j'ai eu mon bac en terminale STMG en option RH.
+            </strong>
+        </p>
+       </div>
+        <div class="box3">
+            <h3>Mes expériences professionelles ont été le salon de coiffure Dile Création et la Mission Locale de Villeurbanne.</h3>
+            <div>
+                <img height="200px" width="auto" class="fit-picture" src="Coiffure.jpg">
             </div>
-
-            <div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
+        </div>
+    </div>
+        
+    <div class="cv-container">
+        <div class="cv">
+            <div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
                 <iframe loading="lazy"
                     style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
                     src="https://www.canva.com/design/DAFnCLv-Rc8/ITfB9acbOrhGyJP6ujxwhw/view?embed"
-                    allowfullscreen="allowfullscreen" allow="fullscreen">
+                    allowfullscreen="allowfullscreen" 
+                    allow="fullscreen">
                 </iframe>
             </div>
             <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFnCLv-Rc8&#x2F;ITfB9acbOrhGyJP6ujxwhw&#x2F;view?utm_content=DAFnCLv-Rc8&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
-                target="_blank" rel="noopener">CV moderne blanc épuré</a> par Yannis Nouasse
-</div>
+                target="_blank" 
+                rel="noopener">
+                CV moderne blanc épuré par Yannis Nouasse
+            </a>
+        </div> 
+    </div>
 </body>
-
+<nav>
+    <a href="#" class="nav-item is-active" data-active-color="orange" data-target="Accueil"> Accueil</a>
+    <a href="#" class="nav-item" data-active-color="green" data-target="A propos"> A propos</a>
+    <a href="#" class="nav-item" data-active-color="blue" data-target="Témoignages"> Témoignages</a>
+    <a href="#" class="nav-item" data-active-color="red" data-target="Blog"> Blog</a>
+    <a href="#" class="nav-item" data-active-color="rebeccapurple" data-target="Contact"> Contact</a>
+  </nav>
+  <span class="nav-indicator"></span>
+</nav>
 </html>
-
-<style>
-    body {
-      background-image: url('thumb-1920-83970.jpg');
-    }
-    </style>
-
-
-
