Merci mon Dieu!

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <a href="#presentation" class="nav-item is-active" data-active-color="orange" data-target="Présentation"> Présentation</a>
+            <a href="#motivation" class="nav-item" data-active-color="green" data-target="Motivation"> Motivation</a>
+            <a href="#parcours" class="nav-item" data-active-color="blue" data-target="Parcours"> Parcours</a>
+            <a href="#cv" class="nav-item" data-active-color="red" data-target="CV"> CV</a>
+          </nav>
+          <span class="nav-indicator"></span>
+        </nav>
+    </header>
     <div class="container">
 
         <div id="presentation">
@@ -67,7 +77,7 @@
         </div>
     </div>
         
-    <div class="cv-container">
+    <div class="cv-container" id="cv">
         <div class="cv">
             <div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
                 <iframe loading="lazy"
@@ -85,13 +95,16 @@
         </div> 
     </div>
 </body>
-<nav>
-    <a href="#" class="nav-item is-active" data-active-color="orange" data-target="Accueil"> Accueil</a>
-    <a href="#" class="nav-item" data-active-color="green" data-target="A propos"> A propos</a>
-    <a href="#" class="nav-item" data-active-color="blue" data-target="Témoignages"> Témoignages</a>
-    <a href="#" class="nav-item" data-active-color="red" data-target="Blog"> Blog</a>
-    <a href="#" class="nav-item" data-active-color="rebeccapurple" data-target="Contact"> Contact</a>
-  </nav>
-  <span class="nav-indicator"></span>
-</nav>
+
+<article>
+    <h1>A propos de moi</h1>
+    <ol>
+      <li>Me contacter</li>
+      <li>nis4578@gmail.com</li>
+    </ol>
+    <footer>
+      <p>© 2025 Yannis Nouasse Guezo. Tous droits réservés.</p>
+    </footer>
+  </article>
+
 </html>
