--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div id="motivation">
            <div class="boulot">
-            <h1>Etudiant en alternance</h1>
+            <h1>Etudiant en alternance !</h1>
             <p class = "métier">
                 <strong>Motivé et enthousiaste cherchant à intégrer un BTS SIO pour acquérir des connaissances approfondies sur le dév.
             </strong>
