--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Le Site de Yannis.</title>
+    <title>Portfolio.</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -43,7 +43,7 @@
 
         <div id="motivation">
            <div class="boulot">
-            <h1>Etudiant en alternance !</h1>
+            <h1>Etudiant en stage non renuméré.</h1>
             <p class = "métier">
                 <strong>Motivé et enthousiaste cherchant à intégrer un BTS SIO pour acquérir des connaissances approfondies sur le dév.
             </strong>
@@ -76,6 +76,20 @@
             </div>
         </div>
     </div>
+
+    <div id="parcours">
+        <div class="job">
+          <h1>Ecole ISITECH</h1>
+          <p class = Formation>
+              <strong>
+               26, avenue Tony Garnier, 69007 Lyon
+              </strong>
+          </p>
+         </div>
+          <div>
+              <h3>Ma formation dans cette école qui s'appelle ISITECH est le BTS SIO avec l'option SLAM (Solutions Logiciels Applications aux Métiers).</h3>
+          </div>
+                
         
     <div class="cv-container" id="cv">
         <div class="cv">
@@ -93,18 +107,24 @@
                 CV moderne blanc épuré par Yannis Nouasse
             </a>
         </div> 
+
+        <h1>Bouton du CV</h1>
+
+        <button type="button" onclick="alert('Téléchargement du CV')">Télécharger le CV</button>
+ 
     </div>
 </body>
 
-<article>
+
+
     <h1>A propos de moi</h1>
     <ol>
       <li>Me contacter</li>
       <li>nis4578@gmail.com</li>
     </ol>
-    <footer>
+
+    <footer style="width: 100%">
       <p>© 2025 Yannis Nouasse Guezo. Tous droits réservés.</p>
     </footer>
-  </article>
 
 </html>
